--- a/changepoint.ipynb
+++ b/changepoint.ipynb
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Respuesta 2\n",
+    "## Answer 1\n",
     "\n",
     "We choose an Exponential distribution for the time series simulation, the code below shows the function `expovariate`, which crate functions that generates random values of exponential distibution with mean $ \\lambda = l$. "
    ]
@@ -111,7 +111,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's generate a time serie on time interval $[0; 500]$, and let's add 3 change points on $200$, $250$ and $300$, for that we generate random exponentialy distributed values, using the previously defined functions exp_1, exp2 adn exp_3, getting $4$ intervals $[0; 200)$, $[200,250)$, $[250;300)$ and $[300,500]$ with values coresponding to exponential distributions with $\\lambda = 1,5,1,4$ respectively. Finally we plot the resulting time series and the real change points moments."
+    "Now let's generate a time serie on time interval $[0; 500]$, and let's add 3 change points on $200$, $250$ and $300$, for that we generate random exponentialy distributed values, using the previously defined functions exp_1, exp2 adn exp_3, getting $4$ intervals $[0; 200)$, $[200,250)$, $[250;300)$ and $[300,500]$ with values coresponding to exponential distributions with $\\lambda = 1,5,1,4$ respectively using `generate_time_series` function. Finally we plot the resulting time series and the real change points moments with `plot_time_series` function."
    ]
   },
   {
@@ -163,33 +163,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Respuesta 2\n",
+    "## Answer 2\n",
     "\n",
-    "Supongamos que sabemos que los puntos simulados tienen distribución exponencial pero no sabemos con qué parámetro $\\lambda$, para cada uno de los intervalos entre `CP` y `CP`. Para ello utilizaremos como función de costo el logaritmo negativo de la función de verosímilitud. Pero antes debemos hallar para qué valor de $\\lambda$ este valor es mínimo manteniendo constante los valores de $y_i$ para todo $0 < i \\le n$. Note que hallar el valor mínimo es equivalente a hallar el valor máximo de la misma función positiva, lo cual sería el método del máximo verosímil. Dada cada $y_i$, debemos maximizar:\n",
     "\n",
-    "$$ L(\\lambda | y_1...y_n) =  \\lambda e^{-\\lambda y_1} \\cdot ... \\cdot \\lambda e^{-\\lambda y_n} = \\lambda^n e^{-\\lambda \\sum_{i = 1}^{n} y_i} $$\n",
+    "Assuming the fact that time series has exponential distribution is known, but the mean($\\lambda$) of the distribution on each interval, splitted by change points, is not known. Then we are going to use the negative logarithm of likelihood function. Let's start finding those $\\lambda$ values, for which the value of this function is minimal, keeping constant $y_i$ (value of time series at instant $i$) values for all  $0 < i \\le n$. Note that find the minimum value, is equivalent to find the maximum in the possitive function, and that can be done finding the **maximum likelihood estimator**. Given $y_i$, we must maximice:\n",
     "\n",
-    "Sin embargo esto es equivalente a maximizar:\n",
+    "<!-- Supongamos que sabemos que los puntos simulados tienen distribución exponencial pero no sabemos con qué parámetro $\\lambda$, para cada uno de los intervalos entre `CP` y `CP`. Para ello utilizaremos como función de costo el logaritmo negativo de la función de verosímilitud. Pero antes debemos hallar para qué valor de $\\lambda$ este valor es mínimo manteniendo constante los valores de $y_i$ para todo $0 < i \\le n$. Note que hallar el valor mínimo es equivalente a hallar el valor máximo de la misma función positiva, lo cual sería el método del máximo verosímil. Dada cada $y_i$, debemos maximizar: -->\n",
+    "\n",
+    "$$ L(\\lambda | y_1...y_n) = Π_{i=1}^n \\lambda e^{-\\lambda y_i}  = \\lambda^n e^{-\\lambda \\sum_{i = 1}^{n} y_i} $$\n",
+    "\n",
+    "Which is equivalent to maximice:\n",
+    "<!-- Sin embargo esto es equivalente a maximizar: -->\n",
     "\n",
     "$$ \\log(\\lambda^n e^{-\\lambda \\sum_{i = 1}^{n} y_i}) = \\log(\\lambda^n) + \\log(e^{-\\lambda \\sum_{i = 1}^{n} y_i}) = n\\log(\\lambda) -\\lambda \\sum_{i = 1}^{n} y_i $$\n",
     "\n",
-    "Por último derivamos e igualamos a $0$ para encontrar este valor:\n",
+    "At last we derive and make the function equal $0$, in order to find such value:\n",
+    "<!-- Por último derivamos e igualamos a $0$ para encontrar este valor: -->\n",
     "\n",
     "$$ 0 = \\frac{dL(n\\log(\\lambda) -\\lambda \\sum_{i = 1}^{n} y_i)}{d\\lambda} = \\frac{n}{\\lambda} - \\sum_{i = 1}^{n} y_i$$\n",
     "\n",
-    "Y finalmente obtenemos que el valor estimado de $\\lambda$ es:\n",
+    "Finally we get the estimated expression value of $\\lambda$:\n",
+    "<!-- Y finalmente obtenemos que el valor estimado de $\\lambda$ es: -->\n",
     "\n",
     "$$ \\lambda_{MLE} = \\frac{n}{\\sum_{i = 1}^{n} y_i}$$\n",
     "\n",
-    "Ahora bien, estimado $\\lambda$ regresamos a nuestra función de costo versión positiva y sustituimos obteniendo:\n",
+    "With the estimated $\\lambda$, we go back on our possitive cost function and replace $\\lambda$ expression on it:\n",
+    "<!-- Ahora bien, estimado $\\lambda$ regresamos a nuestra función de costo versión positiva y sustituimos obteniendo: -->\n",
     "\n",
-    "$$ n\\log(\\lambda_{MLE}) -\\lambda_{MLE} \\sum_{i = 1}^{n} y_i = n\\log \\left(\\frac{n}{\\sum_{i = 1}^{n} y_i} \\right) - \\frac{n}{\\sum_{i = 1}^{n} y_i} \\sum_{i = 1}^{n} y_i = n\\log \\left(\\frac{n}{\\sum_{i = 1}^{n} y_i} \\right) - n = n \\left(\\log \\left(\\frac{n}{\\sum_{i = 1}^{n} y_i} \\right) - 1\\right) $$\n",
+    "$$ n\\log(\\lambda_{MLE}) -\\lambda_{MLE} \\sum_{i = 1}^{n} y_i = n\\log \\left(\\frac{n}{\\sum_{i = 1}^{n} y_i} \\right) - \\frac{n}{\\sum_{i = 1}^{n} y_i} \\sum_{i = 1}^{n} y_i$$ \n",
+    "$$ = n\\log \\left(\\frac{n}{\\sum_{i = 1}^{n} y_i} \\right) - n = n \\left(\\log \\left(\\frac{n}{\\sum_{i = 1}^{n} y_i} \\right) - 1\\right) $$\n",
     "\n",
-    "Pero como lo que queremos es minimizar más adelante con nuestros algoritmos de búsqueda de puntos de ruptura, lo que haremos es trabajar con el opuesto de este, lo que quedaría:\n",
+    "But, the purpose of this in the end is minimaze this value at the change points, so we need to work with the opposite, the negative of this function, the original cost function, so it is:\n",
+    "<!-- Pero como lo que queremos es minimizar más adelante con nuestros algoritmos de búsqueda de puntos de ruptura, lo que haremos es trabajar con el opuesto de este, lo que quedaría: -->\n",
     "\n",
     "$$ n \\left(1 - \\log \\left(\\frac{n}{\\sum_{i = 1}^{n} y_i} \\right) \\right) $$\n",
     "\n",
-    "Para formalizar más la función de costo, utilizaremos la notación:\n",
+    "Let's rename this cost function for an easier aplication on intervals $[a;b]$ of time series:\n",
+    "<!-- Para formalizar más la función de costo, utilizaremos la notación: -->\n",
     "\n",
     "$$ c(y_{a:b}) = n \\left(1 - \\log \\left(\\frac{n}{\\sum_{i = a}^{b} y_i} \\right) \\right) $$\n",
     "\n",
@@ -202,11 +212,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Function that given the values on an interval if time series compute the cost function for the interval\n",
     "def cost_funtion_exp(points):\n",
     "    n = len(points)\n",
     "    if n == 0:\n",
     "        return 0     \n",
-    "    return len(points) * (1 - math.log(n / sum(points)))"
+    "    return n * (1 - math.log(n / sum(points)))"
    ]
   },
   {
