Answer 3 translated too and more comments on OptimalPartition Algorithm

--- a/changepoint.ipynb
+++ b/changepoint.ipynb
@@ -235,13 +235,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Respuesta 3\n",
+    "## Answer 3\n",
     "\n",
-    "A continuación la implementación del algoritmo `Optimal Partition`, que recibe como entrada:\n",
+    "The following code is an imoplementation of  `Optimal Partition` algorithm, it receives as data:\n",
     "\n",
-    "- La serie de tiempo\n",
-    "- La función de costo\n",
-    "- La cantidad de puntos de cambios"
+    "- The time series\n",
+    "- The cost function\n",
+    "- The amount on change points"
    ]
   },
   {
@@ -253,22 +253,22 @@
     "def OptimalPartition(points, cost_func, K):\n",
     "\n",
     "    n = len(points)\n",
-    "    Ms = np.zeros((K,n,n))\n",
+    "    Ms = np.zeros((K,n,n)) #Initialize the arrays\n",
     "    for u in range(n):\n",
     "        for v in range(n):\n",
     "            if u < v:\n",
-    "                Ms[0][u][v] = cost_func(points[u:v+1])\n",
+    "                Ms[0][u][v] = cost_func(points[u:v+1]) #The initial values (base case) of dp\n",
     "\n",
-    "    if K > 1:\n",
+    "    if K > 1: #Fill the arrays using dp \n",
     "        for k in range(1, K):\n",
     "            for u in range(n):\n",
     "                for v in range(n):\n",
     "                    if v-u > k+1:\n",
     "                        Ms[k][u][v] = min([Ms[k-1][u][t] + Ms[0][t+1][v] for t in range(u+k-1, v)])\n",
-    "    L = np.zeros((K+1), dtype=int)\n",
-    "    L[K] = n-1\n",
+    "    L = np.zeros((K+1), dtype=int) #List of change points\n",
+    "    L[K] = n-1  \n",
     "    k = K\n",
-    "    while k > 0:\n",
+    "    while k > 0: #Find the change points using the pre-computed values on dp arrays \n",
     "        s = L[k]        \n",
     "        ts = [Ms[k-1][0][t] + Ms[0][t+1][s] for t in range(k, s)]\n",
     "        ts_min =  min(ts)\n",
@@ -284,7 +284,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A continuación se PRUEBA el método con el conjunto de datos simulados y se obtienen los siguientes resultados:"
+    "We then use the `OptimalPartition` algorithm to predict the change points on teh previously simulated data, the results are shown below."
    ]
   },
   {
