add n_min to .md

--- a/changepoint.ipynb
+++ b/changepoint.ipynb
@@ -333,6 +333,7 @@
     "- $c(.)$: función de costo\n",
     "- $\\beta$: peso de penalización\n",
     "- `K`: constante que satisface **Teorema 3.1**\n",
+    "- $n_{min}$: tamaño de intervalo mínimo\n",
     "\n",
     "**Initialisations**:\n",
     "- `F` = $(-\\beta,..., n_{min}-1 = -\\beta, 0,...,0)$: vector de tamaño `n`\n",
