--- a/changepoint.ipynb
+++ b/changepoint.ipynb
@@ -159,11 +159,11 @@
     "\n",
     "Sin embargo esto es equivalente a maximizar:\n",
     "\n",
-    "$$ \\log(\\lambda^n e^{-\\lambda \\sum_{i = 1}^{n} y_i}) = \\log(\\lambda^n) + \\log(e^{-\\lambda \\sum_{i = 1}^{n} y_i}) = n\\log(\\lambda) -\\lambda \\sum_{i = 1}^{n} y_i $$\n",
+    "$$ \\ln(\\lambda^n e^{-\\lambda \\sum_{i = 1}^{n} y_i}) = \\ln(\\lambda^n) + \\ln(e^{-\\lambda \\sum_{i = 1}^{n} y_i}) = n\\ln(\\lambda) -\\lambda \\sum_{i = 1}^{n} y_i $$\n",
     "\n",
     "Por último derivamos e igualamos a $0$ para encontrar este valor:\n",
     "\n",
-    "$$ 0 = \\frac{dL(n\\log(\\lambda) -\\lambda \\sum_{i = 1}^{n} y_i)}{d\\lambda} = \\frac{n}{\\lambda} - \\sum_{i = 1}^{n} y_i$$\n",
+    "$$ 0 = \\frac{dL(n\\ln(\\lambda) -\\lambda \\sum_{i = 1}^{n} y_i)}{d\\lambda} = \\frac{n}{\\lambda} - \\sum_{i = 1}^{n} y_i$$\n",
     "\n",
     "Y finalmente obtenemos que el valor estimado de $\\lambda$ es:\n",
     "\n",
@@ -326,7 +326,7 @@
     "\n",
     "[ALE porfa por tu el teorema sencillito que no tiene sentido q lo traduzca al español pa que lo pongas luego en inlges. Solo hace falta el enunciado, NO la demostración]\n",
     "\n",
-    "Luego el seudocódigo de nuestro algoritmo sería:\n",
+    "Luego el pseudocódigo de nuestro algoritmo sería:\n",
     "\n",
     "**Input**:\n",
     "- `data` $= \\{y_1,...,y_n\\}$: conjunto de puntos\n",
@@ -340,7 +340,7 @@
     "- `R` = $\\{0\\}$: conjunto inicial de posibles puntos de cambios\n",
     "- `CP` = $(0,...,0)$: array de puntos de cambios asociados a cada dato\n",
     "\n",
-    "**Seudo-Code**:\n",
+    "**Pseudo-Code**:\n",
     "\n",
     "- **for all** $t^* = n_{min},..., n-1$:  \n",
     "    - $F[t^~] = \\min_{t \\in R  ~ | ~ |t^~-t| \\ge n_{min} }\\{F(t) + c(y_{t:t^~})+ \\beta\\}$\n",
