Answer 5 adding AIC

--- a/changepoint.ipynb
+++ b/changepoint.ipynb
@@ -500,6 +500,17 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Answer 5\n",
+    "\n",
+    "Turning to choice of penalty, in practice by far the most common choice is one which is linear in the number of changepoints. Examples of such penalties include Akaike’s Information Criterion (AIC), where $\\beta = 2p$ and $p$ is the\n",
+    "number of additional parameters introduced by adding a changepoint."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -516,7 +527,8 @@
     }
    ],
    "source": [
-    "approx_change_points_PELT_2 = PELT(time_series, cost_funtion_exp, penalty= 1/2 * np.log(len(time_series)))\n",
+    "# approx_change_points_PELT_2 = PELT(time_series, cost_funtion_exp, penalty= 1/2 * np.log(len(time_series)))\n",
+    "approx_change_points_PELT_2 = PELT(time_series, cost_funtion_exp, penalty= 2)\n",
     "approx_change_points_PELT_2"
    ]
   },
