translate extra test cases

--- a/changepoint.ipynb
+++ b/changepoint.ipynb
@@ -616,9 +616,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Complementario\n",
-    "\n",
-    "Una notable diferencia en ambos algoritmos es la complejidad temporal de ambos"
+    "## Complementary Analisis\n",
+    "A remarcable difference between `Optimal Pertition` and `PELT` algorithm is the time complexity. The first one is more expensive for far, a closer look to this fact on other simulated data will provide an experimental proove for this statement; that is teorycally explained by $O(n)$ boundaries of each algorithm.\n",
+    "<!-- Una notable diferencia en ambos algoritmos es la complejidad temporal de ambos -->"
    ]
   },
   {
@@ -627,8 +627,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Genera `r` listas de `K` puntos de cambio, en un intervalo de [0, n),\n",
-    "# con una distancia minima entre cada uno de `min_dist`\n",
+    "# Generates `r` lists with `K` changepoints, in an interval [0, n),\n",
+    "# with a minimal distance equal to `min_dist`\n",
     "def gen_many_change_points(n, K, min_dist, r):\n",
     "\n",
     "    many_change_points = []    \n",
@@ -650,11 +650,20 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We create 10 lists of 3 changepoints for each time series length between 100 and 3000 skipping 20, for a total of 1450 lists of change points. The commented code bellow generates the lists calling `gen_many_change_points` and saves them in a **many_change_points_to_simulate.json** file. Now we just need to open the file and load data and avoid to compute again all test cases, for that is the uncommnted line below. \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "# many_change_points = {}\n",
     "# for i in range(100, 3001, 20):\n",
     "#     many_change_points[i] = gen_many_change_points(i,3,15,10)\n",
@@ -681,7 +690,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Manteniendo $K=3$ puntos de cambios, simularemos $30$ corridas de cada algoritmo sobre un series de tiempo en un intervalo $n = 100, 120, 140, ..., 500$. Luego de esto, graficaremos la media del tiempo demorado para cada $n$."
+    "Keeping $K=3$ changepoints, we simulate time series with length $n = 100, 120, 140, ... , 500$ with change points values taken from the lists created before and run $30$ times each algorithm. Then we compare the mean time result for each $n$ and plot it on the graph at the end of the document.  \n",
+    "\n",
+    "<!-- Manteniendo $K=3$ puntos de cambios, simularemos $30$ corridas de cada algoritmo sobre un series de tiempo en un intervalo $n = 100, 120, 140, ..., 500$. Luego de esto, graficaremos la media del tiempo demorado para cada $n$. -->"
    ]
   },
   {
@@ -724,8 +735,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Creamos los .json donde se guardaran los resultados\n",
-    "# Descomentar si desea borrarlo todo, y ejecutar de nuevo los resultados\n",
+    "# We create .json for save results\n",
+    "# Uncomment and run if you want to erase everythyng and start from zero\n",
     "\n",
     "# empty = {}\n",
     "# \n",
@@ -783,9 +794,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Si desea ejecutar de nuevo los resultados ejecute este codigo\n",
-    "# Tenga presente que se ejecutaran muchisimas simulaciones, por lo tanto le\n",
-    "# recomendamos utilizar los resultados computados\n",
+    "## For execute again the results run the code below\n",
+    "## Execute again simulations and algorithm is goingto take a while\n",
+    "## We recommend use the already computed ones\n",
+    "\n",
     "\n",
     "# get_results(many_change_points)"
    ]
@@ -833,6 +845,14 @@
     "plt.plot(X, Y1)\n",
     "plt.plot(X, Y2)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The graph shows the comparative results of both algoritms, measuring time of compute the changepoints on time series. The blue one belongs to `Optimal Partition` and it's time increese considerably more than `PELT` when time series interval is larger."
    ]
   }
  ],
