--- a/changepoint.ipynb
+++ b/changepoint.ipynb
@@ -713,16 +713,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "empty = {}\n",
-    "\n",
-    "with open('results_cps_OP.json', 'w') as fp:\n",
-    "    json.dump(empty, fp)\n",
-    "with open('results_times_OP.json', 'w') as fp:\n",
-    "    json.dump(empty, fp)\n",
-    "with open('results_cps_PELT.json', 'w') as fp:\n",
-    "    json.dump(empty, fp)\n",
-    "with open('results_times_PELT.json', 'w') as fp:\n",
-    "    json.dump(empty, fp)"
+    "# empty = {}\n",
+    "# \n",
+    "# with open('results_cps_OP.json', 'w') as fp:\n",
+    "#     json.dump(empty, fp)\n",
+    "# with open('results_times_OP.json', 'w') as fp:\n",
+    "#     json.dump(empty, fp)\n",
+    "# with open('results_cps_PELT.json', 'w') as fp:\n",
+    "#     json.dump(empty, fp)\n",
+    "# with open('results_times_PELT.json', 'w') as fp:\n",
+    "#     json.dump(empty, fp)"
    ]
   },
   {
