--- a/changepoint.ipynb
+++ b/changepoint.ipynb
@@ -617,7 +617,7 @@
    "metadata": {},
    "source": [
     "## Complementary Analisis\n",
-    "A remarcable difference between `Optimal Pertition` and `PELT` algorithm is the time complexity. The first one is more expensive for far, a closer look to this fact on other simulated data will provide an experimental proove for this statement; that is teorycally explained by $O(n)$ boundaries of each algorithm.\n",
+    "A remarcable difference between `Optimal Pertition` and `PELT` algorithm is the time complexity. The first one is more expensive, a closer look to this fact on other simulated data will provide an experimental proove for this statement; that is teorycally explained by $O(n)$ boundaries of each algorithm.\n",
     "<!-- Una notable diferencia en ambos algoritmos es la complejidad temporal de ambos -->"
    ]
   },
@@ -794,8 +794,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## For execute again the results run the code below\n",
-    "## Execute again simulations and algorithm is goingto take a while\n",
+    "## To execute again the results run the code below\n",
+    "## Execute again the simulations and the algorithm is going to take a while\n",
     "## We recommend use the already computed ones\n",
     "\n",
     "\n",
@@ -842,7 +842,7 @@
     }
    ],
    "source": [
-    "plt.plot(X, Y1)\n",
+    "plt.plot(X, Y1,)\n",
     "plt.plot(X, Y2)\n",
     "plt.show()"
    ]
@@ -852,7 +852,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The graph shows the comparative results of both algoritms, measuring time of compute the changepoints on time series. The blue one belongs to `Optimal Partition` and it's time increese considerably more than `PELT` when time series interval is larger."
+    "The graph shows the comparative results of both algoritms, measuring time of compute the changepoints on time series. The blue one belongs to `Optimal Partition` and it's running time increese considerably more than `PELT` when time series interval is larger."
    ]
   }
  ],
